# delabella

./: .gitignore  CMakeLists.txt  README.md  batch_dba_test.sh  bazgroty.txt  build.sh  build_dba_test.sh  constrain(0,9).txt  dba_test.cpp  delabella-sdl2.cpp  delabella.cpp  delabella.h  delabella.txt  mac-debug.sh  predicates.h  speedtest.cpp
VS17/: benchmark.ods  delabella-sdl2.vcxproj  delabella-sdl2.vcxproj.filters  delabella-xa.vcxproj  delabella-xa.vcxproj.filters  delabella.sln  delabella.vcxproj  delabella.vcxproj.filters  log10(us_per_point).ods
VS22/: delabella-sdl2.vcxproj  delabella-sdl2.vcxproj.filters  delabella-xa.vcxproj  delabella.sln  delabella.vcxproj
bench/: bench.md
benchmark/: bench_bar+.txt  bench_bar-.txt  bench_bar.txt  bench_cir+.txt  bench_cir-.txt  bench_cir.txt  bench_gam+.txt  bench_gam-.txt  bench_gam.txt  bench_graph.ods  bench_hex+.txt  bench_hex-.txt  bench_hex.txt  bench_std+.txt  bench_std-.txt  bench_std.txt  bench_sym+.txt  bench_sym-.txt  bench_sym.txt  bench_uni+.txt  bench_uni-.txt  bench_uni.txt
delaunator/: delaunator.cpp
tests/: dlbtest_0.txt  dlbtest_1.txt  dlbtest_10.txt  dlbtest_11.txt  dlbtest_12.txt  dlbtest_13.txt  dlbtest_14.txt  dlbtest_15.txt  dlbtest_16.txt  dlbtest_17.txt  dlbtest_18.txt  dlbtest_19.txt  dlbtest_2.txt  dlbtest_20.txt  dlbtest_21.txt  dlbtest_22.txt  dlbtest_23.txt  dlbtest_24.txt  dlbtest_25.txt  dlbtest_26.txt  dlbtest_27.txt  dlbtest_28.txt  dlbtest_29.txt  dlbtest_3.txt  dlbtest_30.txt  dlbtest_31.txt  dlbtest_32.txt  dlbtest_33.txt  dlbtest_34.txt  dlbtest_35.txt  dlbtest_36.txt  dlbtest_37.txt  dlbtest_38.txt  dlbtest_39.txt  dlbtest_4.txt  (+27 more)
(+8 files in other folders)
